# starrail-unlock-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  selector.rs
src/config/: setting.rs
src/registry/: mod.rs
src/selector/: mod.rs
src/validator/: mod.rs
