[package]
name = "starrail-unlock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
winreg = "0.50.0"

[dependencies.native-dialog]
version = "0.6.3"
features = ["windows_dpi_awareness", "windows_visual_styles"]
