[package]
name = "starrail-unlock-rs"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = "thin"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
winreg = "0.50.0"
inquire = "0.6.1"
strum = { version = "0.25.0", features = ["derive"] }
lazy_static = "1.4.0"
